# boring_file_encryption

./: CMakeLists.txt  CONTRIBUTING.md  Docker  LICENSE.md  README.md  bfe.c
